# ChangeLog for dev-python/eyeD3
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/eyeD3/ChangeLog,v 1.44 2010/11/01 00:28:13 xmw Exp $

  01 Nov 2010; Michael Weber <xmw@gentoo.org> eyeD3-0.6.17.ebuild:
  Added ~arm keyword

  16 Feb 2010; Jonathan Callen <abcd@gentoo.org> eyeD3-0.6.17.ebuild:
  Add ~x64-macos for bug 305355

  11 Dec 2009; Brent Baude <ranger@gentoo.org> eyeD3-0.6.17.ebuild:
  Marking eyeD3-0.6.17 ppc64 for bug 290462

  08 Dec 2009; Jeroen Roovers <jer@gentoo.org> eyeD3-0.6.17.ebuild:
  Stable for HPPA (bug #289703).

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> eyeD3-0.6.17.ebuild:
  sparc stable

  08 Nov 2009; nixnut <nixnut@gentoo.org> eyeD3-0.6.17.ebuild:
  ppc stable #290462

  08 Nov 2009; Tobias Klausmann <klausman@gentoo.org> eyeD3-0.6.17.ebuild:
  Stable on alpha, bug #290462

  30 Oct 2009; Markus Meier <maekke@gentoo.org> eyeD3-0.6.17.ebuild:
  amd64/x86 stable, bug #290462

  25 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  eyeD3-0.6.17.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org> eyeD3-0.6.17.ebuild:
  Merge from Prefix

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> eyeD3-0.6.17.ebuild:
  Marked ~hppa (bug #272746).

*eyeD3-0.6.17 (02 Jun 2009)

  02 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> +eyeD3-0.6.17.ebuild:
  Version bump.

*eyeD3-0.6.16 (28 Sep 2008)

  28 Sep 2008; Peter Alfredsen <loki_val@gentoo.org> +eyeD3-0.6.16.ebuild:
  Bump, bug 236319.

*eyeD3-0.6.15 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org> +eyeD3-0.6.15.ebuild:
  Version bump.

  09 May 2008; Raúl Porcel <armin76@gentoo.org> eyeD3-0.6.14.ebuild:
  sparc stable

  12 Nov 2007; Samuli Suominen <drac@gentoo.org> eyeD3-0.6.14.ebuild:
  amd64 stable

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> eyeD3-0.6.14.ebuild:
  ppc. stable
