@@ -1,5 +1,6 @@
 AUX gentoo_lib_name.patch 1772 RMD160 5a1eea8d3c681dd335486c622f6e19c11acfe461 SHA1 1d8de4d267a05b83a842c9ee8fd7985ee1b11220 SHA256 9f66cc2bfdd12b4b7ae9f8f3cf39db5b588025a83e8b1008dad823616a494902
 DIST python-nss-0.8.tar.lzma 108903 RMD160 e636140ab155e64d99e9eb1b5d574ae1e966cf07 SHA1 ad67c7c5e65be0054c98aea0eced12414208352a SHA256 6af55f01782867b2bc9ce09838c385ba9340c2a0646c3cf1ec1931892f64086a
+EBUILD python-nss-0.8-r1.ebuild 1234 RMD160 516979cb04f06fab320f53e0c436bd68c40fe6c8 SHA1 ab1503a9eedc370a4a012254d1e4907c306f6e64 SHA256 00265be55e8900e07e6ab95880a2cd403bad32b969a4ee31e05592e896c29404
 EBUILD python-nss-0.8.ebuild 1215 RMD160 054e529cc02f20859f6afd0b687910eb7806debe SHA1 bcd477efb339937197ac4f87ca10c8933fd0dc55 SHA256 2e8550744abaed58128bf8e47c3b79f2dbe1b70f1189c5542cab77e36a7d61fd
-MISC ChangeLog 434 RMD160 7898f7b17685c9c53bb9cf530182780b15118d4d SHA1 753d4a5c60e5498dcedc728b73e1e17f2afae4fc SHA256 6bb72683a7d64d0b79cc8ecab93b2c2cb262a1ed01b63152be4b6198cd0f30a0
+MISC ChangeLog 606 RMD160 8d39742d02b36a359c3ce55c3895b02ae0689b6b SHA1 2f463eae81f440f5d59dcca927ddbf1f89a91a5a SHA256 cf26efa879dcc08e2ec3fddd9b8bad608587c6862782529602fb1f59618bf904
 MISC metadata.xml 502 RMD160 edf16334a8e38ff7c9954e83c9936fe056d3f7b5 SHA1 d2d73949f821ea8ea628e463de70ac937b94e692 SHA256 cf743fc45431ffa0c5d1bde902dd0179270818125e7a63d58a724455570ac248
