@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/eyeD3
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/eyeD3/ChangeLog,v 1.44 2010/11/01 00:28:13 xmw Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/eyeD3/ChangeLog,v 1.45 2011/10/31 19:59:11 hwoarang Exp $
+
+  31 Oct 2011; Markos Chandras <hwoarang@gentoo.org> eyeD3-0.6.17.ebuild:
+  Fix installation of eyeD3 script. Patch by Arfrever.
 
   01 Nov 2010; Michael Weber <xmw@gentoo.org> eyeD3-0.6.17.ebuild:
   Added ~arm keyword
